# quickcheck-state-machine

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Modular.hs  README.md  quickcheck-state-machine-model.cabal  quickcheck-state-machine.cabal  stack.yaml  stack_lts-11.yaml
app/: Main.hs
example/: README.md  quickcheck-state-machine-example.cabal  quickcheck-state-machine-model-example.cabal  stack.yaml
example/src/: Bank.hs  CircularBuffer.hs  CrudWebserverDb.hs  CrudWebserverDbRace.hs  CrudWebserverFile.hs  DeviceUpdates.hs  DieHard.hs  DistributedDb.hs  MutableReference.hs  TicketDispenser.hs  UnionFind.hs  Utils.hs
example/src/MutableReference/: Prop.hs
example/test/: CircularBufferSpec.hs  CrudWebserverDbRaceSpec.hs  CrudWebserverDbSpec.hs  CrudWebserverFileSpec.hs  DeviceUpdatesSpec.hs  DieHardSpec.hs  HspecInstance.hs  Main.hs  MutableReferenceSpec.hs  TicketDispenserSpec.hs  UnionFindSpec.hs
prototype/: CHANGELOG.md  README.md  package.yaml  quickcheck-state-machine-simple.cabal
prototype/src/: Lib.hs  Parallel.hs  QuickCheckUtils.hs  Types.hs
prototype/src/Types/: Environment.hs  GenSym.hs  HFunctor.hs  History.hs  Reference.hs
prototype/test/: MemoryReference.hs
src/Test/: StateMachine.hs
src/Test/QuickCheck/: Example.hs  StateMachineModel.hs
src/Test/QuickCheck/StateMachineModel/: DieHardExample.hs  Example.hs  IxMap.hs  Utils.hs
src/Test/StateMachine/: BoxDrawer.hs  Compose.hs  ConstructorName.hs  DotDrawing.hs  Generics.hs  Labelling.hs  Logic.hs  Markov.hs  Parallel.hs  Prototype.hs  QuickShrink.hs  Sampling.hs  Sequential.hs  TH.hs  Types.hs  Utils.hs  Z.hs
src/Test/StateMachine/Internal/: AlphaEquality.hs  IxMap.hs  Parallel.hs  ScopeCheck.hs  Sequential.hs  Types.hs  Utils.hs
src/Test/StateMachine/Internal/Types/: Environment.hs  IntRef.hs
src/Test/StateMachine/Internal/Utils/: BoxDrawer.hs
src/Test/StateMachine/Lockstep/: Aux.hs  Auxiliary.hs  NAry.hs  Simple.hs
src/Test/StateMachine/Types/: AlphaEquality.hs  Environment.hs  GenSym.hs  Generics.hs  HFunctor.hs  History.hs  Rank2.hs  References.hs
src/Test/StateMachine/Types/Generics/: TH.hs
src/Test/StateMachine/Types/HFunctor/: TH.hs
src/Test/Tasty/: QuickCheckSM.hs
src/Test/Tasty/QuickCheck/: Markov.hs  Sampling.hs
talk/bobkonf-2018/: Makefile  references.bib  slides.md
talk/bobkonf-2019/: references.bib  slides.md
talk/bobkonf-2019-summer-icfp/: abstract.md  references.bib  slides.md
test/: Bookstore.hs  CircularBuffer.hs  Cleanup.hs  CrudWebserverDb.hs  DieHard.hs  Echo.hs  ErrorEncountered.hs  Hanoi.hs  IORefs.hs  MemoryReference.hs  Mock.hs  Overflow.hs  ProcessRegistry.hs  RQlite.hs  SQLite.hs  Schema.hs  ShrinkingProps.hs  Spec.hs  TicketDispenser.hs  UnionFind.hs
