name:                quickcheck-state-machine-model
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/advancedtelematic/quickcheck-state-machine-model#readme
license:             BSD3
license-file:        LICENSE
author:              Stevan Andjelkovic
maintainer:          Stevan Andjelkovic <stevan@advancedtelematic.com>
copyright:           Copyright (C) 2017, ATS Advanced Telematic Systems GmbH
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.QuickCheck.StateMachineModel
                     , Test.QuickCheck.StateMachineModel.Example
  build-depends:       ansi-wl-pprint
                     , base >= 4.7 && < 5
                     , containers
                     , mtl
                     , parallel-io
                     , QuickCheck
                     , random
                     , stm
  default-language:    Haskell2010

test-suite quickcheck-state-machine-model-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , mtl
                     , QuickCheck
                     , quickcheck-state-machine-model
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/advancedtelematic/quickcheck-state-machine-model
