name:                quickcheck-state-machine
version:             0.4.2
synopsis:            Test monadic programs using state machine based models
description:         See README at <https://github.com/advancedtelematic/quickcheck-state-machine#readme>
homepage:            https://github.com/advancedtelematic/quickcheck-state-machine#readme
license:             BSD3
license-file:        LICENSE
author:              Stevan Andjelkovic
maintainer:          Stevan Andjelkovic <stevan.andjelkovic@here.com>
copyright:           Copyright (C) 2017-2018, ATS Advanced Telematic Systems GmbH;
                                   2018, HERE Europe B.V.
category:            Testing
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , CONTRIBUTING.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2, GHC == 8.4.3

library
  hs-source-dirs:      src
  ghc-options:
              -Weverything
              -Wno-missing-exported-signatures
              -Wno-missing-import-lists
              -Wno-missed-specialisations
              -Wno-all-missed-specialisations
              -Wno-unsafe
              -Wno-safe
              -Wno-missing-local-signatures
              -Wno-monomorphism-restriction
  exposed-modules:     Test.StateMachine
                     , Test.StateMachine.BoxDrawer
                     , Test.StateMachine.ConstructorName
                     , Test.StateMachine.Logic
                     , Test.StateMachine.Parallel
                     , Test.StateMachine.Sequential
                     , Test.StateMachine.Types
                     , Test.StateMachine.Types.Environment
                     , Test.StateMachine.Types.GenSym
                     , Test.StateMachine.Types.History
                     , Test.StateMachine.Types.Rank2
                     , Test.StateMachine.Types.References
                     , Test.StateMachine.Utils
                     , Test.StateMachine.Z
  other-modules:
      Paths_quickcheck_state_machine
  build-depends:
        ansi-wl-pprint >=0.6.7.3,
        base >=4.7 && <5,
        containers >=0.5.7.1,
        directory,
        exceptions >=0.8.3,
        filepath,
        lifted-async >=0.9.3,
        matrix >=0.3.5.0,
        monad-control >=1.0.2.2,
        mtl >=2.2.1,
        pretty-show,
        QuickCheck >=2.9.2,
        split >=0.2.3.3,
        stm >=2.4.4.1,
        time,
        tree-diff >= 0.0.1,
        vector >=0.12.0.1
  default-language:    Haskell2010

executable smdb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
              -threaded -rtsopts -with-rtsopts=-N
              -Weverything
              -Wno-missing-exported-signatures
              -Wno-missing-import-lists
              -Wno-missed-specialisations
              -Wno-all-missed-specialisations
              -Wno-unsafe
              -Wno-safe
              -Wno-missing-local-signatures
              -Wno-monomorphism-restriction
  build-depends:       base
                     , brick
                     , vty
                     , quickcheck-state-machine
                     , text
                     , text-zipper
  default-language: Haskell2010

test-suite quickcheck-state-machine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       bytestring,
                       directory,
                       doctest,
                       filelock,
                       filepath,
                       http-client,
                       lifted-async >=0.9.3,
                       matrix >=0.3.5.0,
                       monad-control >=1.0.2.2,
                       monad-logger,
                       mtl,
                       network,
                       persistent,
                       persistent-postgresql,
                       persistent-template,
                       process,
                       QuickCheck >=2.9.2,
                       quickcheck-instances,
                       quickcheck-state-machine,
                       random,
                       resourcet,
                       servant,
                       servant-client,
                       servant-server,
                       stm,
                       strict,
                       string-conversions,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       text,
                       tree-diff,
                       vector >=0.12.0.1,
                       wai,
                       warp

  other-modules:       CircularBuffer,
                       CrudWebserverDb,
                       DieHard,
                       Echo,
                       MemoryReference,
                       TicketDispenser

  ghc-options:
              -threaded -rtsopts -with-rtsopts=-N
              -Weverything
              -Wno-missing-exported-signatures
              -Wno-missing-import-lists
              -Wno-missed-specialisations
              -Wno-all-missed-specialisations
              -Wno-unsafe
              -Wno-safe
              -Wno-missing-local-signatures
              -Wno-monomorphism-restriction
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/advancedtelematic/quickcheck-state-machine
