name:                quickcheck-state-machine
version:             0.6.0
synopsis:            Test monadic programs using state machine based models
description:         See README at <https://github.com/advancedtelematic/quickcheck-state-machine#readme>
homepage:            https://github.com/advancedtelematic/quickcheck-state-machine#readme
license:             BSD3
license-file:        LICENSE
author:              Stevan Andjelkovic
maintainer:          Stevan Andjelkovic <stevan.andjelkovic@here.com>
copyright:           Copyright (C) 2017-2018, ATS Advanced Telematic Systems GmbH;
                                   2018-2019, HERE Europe B.V.
category:            Testing
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , CONTRIBUTING.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.3

library
  hs-source-dirs:      src
  ghc-options:
              -Weverything
              -Wno-missing-exported-signatures
              -Wno-missing-import-lists
              -Wno-missed-specialisations
              -Wno-all-missed-specialisations
              -Wno-unsafe
              -Wno-safe
              -Wno-missing-local-signatures
              -Wno-monomorphism-restriction
  exposed-modules:     Test.StateMachine
                     , Test.StateMachine.BoxDrawer
                     , Test.StateMachine.ConstructorName
                     , Test.StateMachine.DotDrawing
                     , Test.StateMachine.Labelling
                     , Test.StateMachine.Logic
                     , Test.StateMachine.Markov
                     , Test.StateMachine.Parallel
                     , Test.StateMachine.Sequential
                     , Test.StateMachine.Types
                     , Test.StateMachine.Types.Environment
                     , Test.StateMachine.Types.GenSym
                     , Test.StateMachine.Types.History
                     , Test.StateMachine.Types.Rank2
                     , Test.StateMachine.Types.References
                     , Test.StateMachine.Utils
                     , Test.StateMachine.Z
  other-modules:
      Paths_quickcheck_state_machine
  build-depends:
        ansi-wl-pprint >=0.6.7.3,
        base >=4.10 && <5,
        containers >=0.5.7.1,
        directory >=1.0.0.0,
        exceptions >=0.8.3,
        filepath >=1.0,
        generic-data >=0.3.0.0,
        graphviz,
        markov-chain-usage-model >=0.0.0,
        matrix >=0.3.5.0,
        mtl >=2.2.1,
        time >=1.7,
        pretty-show >=1.6.16,
        process >=1.2.0.0,
        QuickCheck >=2.13.1,
        random >=1.1,
        split,
        text,
        tree-diff >=0.0.2.1,
        unliftio >=0.2.7.0
  default-language:    Haskell2010

test-suite quickcheck-state-machine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       array,
                       base,
                       bytestring,
                       containers,
                       directory,
                       doctest,
                       filelock,
                       filepath,
                       hashable,
                       hashtables,
                       http-client,
                       monad-logger,
                       mtl,
                       network,
                       persistent >=2.8.2 && <2.10.0,
                       persistent-postgresql,
                       persistent-template,
                       pretty-show,
                       process,
                       QuickCheck,
                       quickcheck-instances,
                       quickcheck-state-machine,
                       random,
                       resourcet,
                       servant,
                       servant-client,
                       servant-server,
                       split,
                       strict,
                       string-conversions,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       text,
                       tree-diff,
                       vector >=0.12.0.1,
                       wai,
                       warp,
                       unliftio

  other-modules:       CircularBuffer,
                       CrudWebserverDb,
                       DieHard,
                       Echo,
                       ErrorEncountered,
                       Hanoi,
                       MemoryReference,
                       ProcessRegistry,
                       ShrinkingProps,
                       TicketDispenser,
                       UnionFind

  ghc-options:
              -threaded -rtsopts -with-rtsopts=-N
              -fno-ignore-asserts
              -Weverything
              -Wno-missing-exported-signatures
              -Wno-missing-import-lists
              -Wno-missed-specialisations
              -Wno-all-missed-specialisations
              -Wno-unsafe
              -Wno-safe
              -Wno-missing-local-signatures
              -Wno-monomorphism-restriction
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/advancedtelematic/quickcheck-state-machine
