name:                quickcheck-state-machine-example
version:             1
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     CrudWebserverDb
                     , CrudWebserverFile
                     , DieHard
                     , DistributedDb
                     , MutableReference
                     , MutableReference.Prop
                     , TicketDispenser
                     , UnionFind
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , binary
                     , containers
                     , directory
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , distributed-static
                     , filelock
                     , http-client
                     , monad-logger
                     , mtl
                     , network
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , QuickCheck
                     , quickcheck-instances
                     , quickcheck-state-machine
                     , random
                     , servant
                     , servant-client
                     , servant-server
                     , strict
                     , string-conversions
                     , template-haskell
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite quickcheck-state-machine-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       CrudWebserverDbSpec
                     , CrudWebserverFileSpec
                     , DieHardSpec
                     , MutableReferenceSpec
                     , Spec
                     , TicketDispenserSpec
                     , UnionFindSpec
  build-depends:       base
                     , containers
                     , hspec
                     , QuickCheck
                     , quickcheck-state-machine
                     , quickcheck-state-machine-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable ddb
  build-depends:       base
                     , binary
                     , containers
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , distributed-static
  main-is:             DistributedDb.hs
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is DistributedDb
  default-language:    Haskell2010