name:                quickcheck-state-machine-example
version:             1
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     CircularBuffer
                     , CrudWebserverDb
                     , CrudWebserverFile
                     , DieHard
                     , MutableReference
                     , MutableReference.Prop
                     , TicketDispenser
                     , UnionFind
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , containers
                     , directory
                     , filelock
                     , http-client
                     , lifted-async
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , QuickCheck
                     , quickcheck-instances
                     , quickcheck-state-machine
                     , random
                     , servant
                     , servant-client
                     , servant-server
                     , strict
                     , string-conversions
                     , text
                     , vector
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite quickcheck-state-machine-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       CircularBufferSpec
                     , CrudWebserverDbSpec
                     , CrudWebserverFileSpec
                     , DieHardSpec
                     , MutableReferenceSpec
                     , Spec
                     , TicketDispenserSpec
                     , UnionFindSpec
  build-depends:       base
                     , containers
                     , hspec
                     , QuickCheck
                     , quickcheck-state-machine
                     , quickcheck-state-machine-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
