name:                quickcheck-state-machine-example
version:             1
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Bank
                     , CircularBuffer
                     , CrudWebserverDb
                     , CrudWebserverDbRace
                     , CrudWebserverFile
                     , DieHard
                     , MutableReference
                     , MutableReference.Prop
                     , TicketDispenser
                     , UnionFind
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , filelock
                     , filepath
                     , http-client
                     , lifted-async
                     , monad-control
                     , monad-logger
                     , mtl
                     , network
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , process
                     , QuickCheck
                     , quickcheck-instances
                     , quickcheck-with-counterexamples
                     , quickcheck-state-machine
                     , random
                     , resourcet
                     , servant
                     , servant-client
                     , servant-server
                     , strict
                     , string-conversions
                     , text
                     , vector
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite quickcheck-state-machine-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       CircularBufferSpec
                     , CrudWebserverDbSpec
                     , CrudWebserverDbRaceSpec
                     , CrudWebserverFileSpec
                     , DieHardSpec
                     , HspecInstance
                     , MutableReferenceSpec
                     , Spec
                     , TicketDispenserSpec
                     , UnionFindSpec
  build-depends:       base
                     , containers
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , quickcheck-with-counterexamples
                     , quickcheck-state-machine
                     , quickcheck-state-machine-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
